Additional logging added

--- a/src/main/java/com/haud/qa/exercise/SeleniumTest/Results/Desktop/emailable-report.html
+++ b/src/main/java/com/haud/qa/exercise/SeleniumTest/Results/Desktop/emailable-report.html
@@ -1,264 +1,35 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "https://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="https://www.w3.org/1999/xhtml" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="https://www.w3.org/1999/xhtml ">
+<html xmlns="https://www.w3.org/1999/xhtml">
 <head>
-   <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-   <title>TestNG Report</title>
-   <style type="text/css">
-      table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}.invisible {display:none}
-   </style>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+<title>TestNG Report</title>
+<style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}.invisible {display:none}</style>
 </head>
 <body>
 <table>
-   <tr>
-      <th>Test</th>
-      <th># Passed</th>
-      <th># Skipped</th>
-      <th># Retried</th>
-      <th># Failed</th>
-      <th>Time (ms)</th>
-      <th>Included Groups</th>
-      <th>Excluded Groups</th>
-   </tr>
-   <tr>
-      <th colspan="8">Haud</th>
-   </tr>
-   <tr>
-      <td><a href="#t0">Desktop</a></td>
-      <td class="num">17</td>
-      <td class="num">0</td>
-      <td class="num">0</td>
-      <td class="num">0</td>
-      <td class="num">133,417</td>
-      <td></td>
-      <td></td>
-   </tr>
+<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
+<tr><th colspan="8">Haud</th></tr>
+<tr><td><a href="#t0">Desktop</a></td><td class="num">18</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">144,856</td><td></td><td></td></tr>
 </table>
-<table id='summary'>
-   <thead>
-   <tr>
-      <th>Class</th>
-      <th>Method</th>
-      <th>Start</th>
-      <th>Time (ms)</th>
-   </tr>
-   </thead>
-   <tbody>
-   <tr>
-      <th colspan="4">Haud</th>
-   </tr>
-   </tbody>
-   <tbody id="t0">
-   <tr>
-      <th colspan="4">Desktop &#8212; passed</th>
-   </tr>
-   <tr class="passedeven">
-      <td rowspan="17">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest</td>
-      <td><a href="#m0">test_AboutHaudLink</a></td>
-      <td rowspan="1">1622447974462</td>
-      <td rowspan="1">872</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m1">test_AboutUsMenu</a></td>
-      <td rowspan="1">1622447981470</td>
-      <td rowspan="1">249</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m2">test_CareersLink</a></td>
-      <td rowspan="1">1622448001005</td>
-      <td rowspan="1">2688</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m3">test_CompanyLink</a></td>
-      <td rowspan="1">1622447987515</td>
-      <td rowspan="1">1830</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m4">test_ContactLink</a></td>
-      <td rowspan="1">1622447911226</td>
-      <td rowspan="1">1422</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m5">test_HaudSolutionsLink</a></td>
-      <td rowspan="1">1622447918482</td>
-      <td rowspan="1">2075</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m6">test_HomeLink</a></td>
-      <td rowspan="1">1622447886550</td>
-      <td rowspan="1">1474</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m7">test_KnowledgeCenterLink</a></td>
-      <td rowspan="1">1622447894736</td>
-      <td rowspan="1">1695</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m8">test_LogoClick</a></td>
-      <td rowspan="1">1622447878062</td>
-      <td rowspan="1">1624</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m9">test_MeetTeamLink</a></td>
-      <td rowspan="1">1622447995218</td>
-      <td rowspan="1">1871</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m10">test_SmartBidLink</a></td>
-      <td rowspan="1">1622447966885</td>
-      <td rowspan="1">1448</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m11">test_SmartChargeLink</a></td>
-      <td rowspan="1">1622447944043</td>
-      <td rowspan="1">1471</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m12">test_SmartEnabledLink</a></td>
-      <td rowspan="1">1622447951917</td>
-      <td rowspan="1">1144</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m13">test_SmartNForceLink</a></td>
-      <td rowspan="1">1622447933509</td>
-      <td rowspan="1">3839</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m14">test_SmartNvisionLink</a></td>
-      <td rowspan="1">1622447959309</td>
-      <td rowspan="1">1760</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m15">test_SmartXchangeLink</a></td>
-      <td rowspan="1">1622447926930</td>
-      <td rowspan="1">2085</td>
-   </tr>
-   <tr class="passedeven">
-      <td><a href="#m16">test_TrendingTopicsLink</a></td>
-      <td rowspan="1">1622447903148</td>
-      <td rowspan="1">1890</td>
-   </tr>
-   </tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Haud</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Desktop &#8212; passed</th></tr><tr class="passedeven"><td rowspan="18">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest</td><td><a href="#m0">test_AboutHaudLink</a></td><td rowspan="1">1622457655309</td><td rowspan="1">1673</td></tr><tr class="passedeven"><td><a href="#m1">test_AboutUsMenu</a></td><td rowspan="1">1622457596875</td><td rowspan="1">249</td></tr><tr class="passedeven"><td><a href="#m2">test_CareersLink</a></td><td rowspan="1">1622457677664</td><td rowspan="1">2494</td></tr><tr class="passedeven"><td><a href="#m3">test_CompanyLink</a></td><td rowspan="1">1622457663428</td><td rowspan="1">1876</td></tr><tr class="passedeven"><td><a href="#m4">test_ContactLink</a></td><td rowspan="1">1622457575219</td><td rowspan="1">1337</td></tr><tr class="passedeven"><td><a href="#m5">test_HaudSolutionsDropDown</a></td><td rowspan="1">1622457589997</td><td rowspan="1">295</td></tr><tr class="passedeven"><td><a href="#m6">test_HaudSolutionsLink</a></td><td rowspan="1">1622457582555</td><td rowspan="1">1463</td></tr><tr class="passedeven"><td><a href="#m7">test_HomeLink</a></td><td rowspan="1">1622457551715</td><td rowspan="1">1353</td></tr><tr class="passedeven"><td><a href="#m8">test_KnowledgeCenterLink</a></td><td rowspan="1">1622457558975</td><td rowspan="1">1424</td></tr><tr class="passedeven"><td><a href="#m9">test_LogoClick</a></td><td rowspan="1">1622457543125</td><td rowspan="1">1583</td></tr><tr class="passedeven"><td><a href="#m10">test_MeetTeamLink</a></td><td rowspan="1">1622457671584</td><td rowspan="1">1965</td></tr><tr class="passedeven"><td><a href="#m11">test_SmartBidLink</a></td><td rowspan="1">1622457646830</td><td rowspan="1">1728</td></tr><tr class="passedeven"><td><a href="#m12">test_SmartChargeLink</a></td><td rowspan="1">1622457620328</td><td rowspan="1">1849</td></tr><tr class="passedeven"><td><a href="#m13">test_SmartEnabledLink</a></td><td rowspan="1">1622457629991</td><td rowspan="1">1807</td></tr><tr class="passedeven"><td><a href="#m14">test_SmartNForceLink</a></td><td rowspan="1">1622457611470</td><td rowspan="1">2283</td></tr><tr class="passedeven"><td><a href="#m15">test_SmartNvisionLink</a></td><td rowspan="1">1622457638414</td><td rowspan="1">1883</td></tr><tr class="passedeven"><td><a href="#m16">test_SmartXchangeLink</a></td><td rowspan="1">1622457603221</td><td rowspan="1">2090</td></tr><tr class="passedeven"><td><a href="#m17">test_TrendingTopicsLink</a></td><td rowspan="1">1622457566609</td><td rowspan="1">1440</td></tr></tbody>
 </table>
-<h2>Desktop</h2>
-<h3 id="m0">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_AboutHaudLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_AboutUsMenu</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_CareersLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_CompanyLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_ContactLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_HaudSolutionsLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_HomeLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_KnowledgeCenterLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_LogoClick</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_MeetTeamLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartBidLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartChargeLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m12">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartEnabledLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m13">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartNForceLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m14">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartNvisionLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m15">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartXchangeLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m16">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_TrendingTopicsLink</h3>
-<table class="result">
-   <tr>
-      <th class="invisible"/>
-   </tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Desktop</h2><h3 id="m0">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_AboutHaudLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_AboutUsMenu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_CareersLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_CompanyLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_ContactLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_HaudSolutionsDropDown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_HaudSolutionsLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_HomeLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_KnowledgeCenterLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_LogoClick</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_MeetTeamLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartBidLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m12">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartChargeLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m13">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartEnabledLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m14">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartNForceLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m15">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartNvisionLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m16">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_SmartXchangeLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m17">com.haud.qa.exercise.SeleniumTest.Desktop.DTHaudHeaderNavigationTest#test_TrendingTopicsLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
