--- a/src/main/java/com/haud/qa/exercise/SeleniumTest/Results/Mobile/index.html
+++ b/src/main/java/com/haud/qa/exercise/SeleniumTest/Results/Mobile/index.html
@@ -322,8 +322,8 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite thread-count=&quot;4&quot; parallel=&quot;tests&quot; name=&quot;Haud&quot;&gt;
-  &lt;test thread-count=&quot;4&quot; parallel=&quot;tests&quot; name=&quot;Mobile&quot;&gt;
+&lt;suite name=&quot;Haud&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Mobile&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest&quot;/&gt;
     &lt;/classes&gt;
@@ -369,72 +369,72 @@ data.addRows(16);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test_SmartBidLink')
 data.setCell(0, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(0, 3, 3612);
+data.setCell(0, 3, 4178);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test_MeetTeamLink')
+data.setCell(1, 1, 'test_SmartNForceLink')
 data.setCell(1, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(1, 3, 3507);
+data.setCell(1, 3, 3191);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'test_SmartEnabledLink')
 data.setCell(2, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(2, 3, 3022);
+data.setCell(2, 3, 3147);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'test_SmartNvisionLink')
+data.setCell(3, 1, 'test_AboutHaudLink')
 data.setCell(3, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(3, 3, 2927);
+data.setCell(3, 3, 2949);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'test_AboutHaudLink')
+data.setCell(4, 1, 'test_SmartNvisionLink')
 data.setCell(4, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(4, 3, 2817);
+data.setCell(4, 3, 2821);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'test_ContactLink')
+data.setCell(5, 1, 'test_MeetTeamLink')
 data.setCell(5, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(5, 3, 2794);
+data.setCell(5, 3, 2808);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'test_CompanyLink')
+data.setCell(6, 1, 'test_CareersLink')
 data.setCell(6, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(6, 3, 2502);
+data.setCell(6, 3, 2722);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'test_SmartChargeLink')
+data.setCell(7, 1, 'test_CompanyLink')
 data.setCell(7, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(7, 3, 2479);
+data.setCell(7, 3, 2630);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'test_SmartNForceLink')
+data.setCell(8, 1, 'test_SmartXchangeLink')
 data.setCell(8, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(8, 3, 2011);
+data.setCell(8, 3, 2023);
 data.setCell(9, 0, 9)
-data.setCell(9, 1, 'test_CareersLink')
+data.setCell(9, 1, 'test_SmartChargeLink')
 data.setCell(9, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(9, 3, 1956);
+data.setCell(9, 3, 1861);
 data.setCell(10, 0, 10)
 data.setCell(10, 1, 'test_HaudSolutionsLink')
 data.setCell(10, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(10, 3, 1708);
+data.setCell(10, 3, 1833);
 data.setCell(11, 0, 11)
 data.setCell(11, 1, 'test_KnowledgeCenterLink')
 data.setCell(11, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(11, 3, 1651);
+data.setCell(11, 3, 1510);
 data.setCell(12, 0, 12)
 data.setCell(12, 1, 'test_TrendingTopicsLink')
 data.setCell(12, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(12, 3, 1616);
+data.setCell(12, 3, 1481);
 data.setCell(13, 0, 13)
 data.setCell(13, 1, 'test_LogoClick')
 data.setCell(13, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(13, 3, 1510);
+data.setCell(13, 3, 1424);
 data.setCell(14, 0, 14)
-data.setCell(14, 1, 'test_SmartXchangeLink')
+data.setCell(14, 1, 'test_ContactLink')
 data.setCell(14, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(14, 3, 1451);
+data.setCell(14, 3, 1380);
 data.setCell(15, 0, 15)
 data.setCell(15, 1, 'test_HomeLink')
 data.setCell(15, 2, 'com.haud.qa.exercise.SeleniumTest.Mobile.MWHaudHeaderNavigationTest')
-data.setCell(15, 3, 228);
+data.setCell(15, 3, 142);
 window.suiteTableData['Haud']= { tableData: data, tableDiv: 'times-div-Haud'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 36 seconds</span>
               <div id="times-div-Haud">
               </div> <!-- times-div-Haud -->
             </div> <!-- times-div -->
@@ -467,191 +467,191 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_LogoClick</span>
-                <span class="method-start">7617 ms</span>
+                <span class="method-start">7475 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">9129 ms</span>
+                <span class="method-start">8901 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">9351 ms</span>
+                <span class="method-start">9032 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_HomeLink</span>
-                <span class="method-start">35276 ms</span>
+                <span class="method-start">15396 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">35505 ms</span>
+                <span class="method-start">15538 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">35647 ms</span>
+                <span class="method-start">15666 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_KnowledgeCenterLink</span>
-                <span class="method-start">42502 ms</span>
+                <span class="method-start">21545 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">44153 ms</span>
+                <span class="method-start">23055 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">44314 ms</span>
+                <span class="method-start">23206 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_TrendingTopicsLink</span>
-                <span class="method-start">50492 ms</span>
+                <span class="method-start">29573 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">52108 ms</span>
+                <span class="method-start">31054 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">52251 ms</span>
+                <span class="method-start">31198 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_ContactLink</span>
-                <span class="method-start">56493 ms</span>
+                <span class="method-start">37452 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">59287 ms</span>
+                <span class="method-start">38832 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">59429 ms</span>
+                <span class="method-start">38954 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_HaudSolutionsLink</span>
-                <span class="method-start">64986 ms</span>
+                <span class="method-start">45072 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">66695 ms</span>
+                <span class="method-start">46905 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">66836 ms</span>
+                <span class="method-start">47102 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_SmartXchangeLink</span>
-                <span class="method-start">73125 ms</span>
+                <span class="method-start">53346 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">74576 ms</span>
+                <span class="method-start">55369 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">74713 ms</span>
+                <span class="method-start">55530 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_SmartNForceLink</span>
-                <span class="method-start">80346 ms</span>
+                <span class="method-start">59176 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">82357 ms</span>
+                <span class="method-start">62367 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">82511 ms</span>
+                <span class="method-start">62508 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_SmartChargeLink</span>
-                <span class="method-start">89139 ms</span>
+                <span class="method-start">68711 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">91618 ms</span>
+                <span class="method-start">70572 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">91745 ms</span>
+                <span class="method-start">70694 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_SmartEnabledLink</span>
-                <span class="method-start">97769 ms</span>
+                <span class="method-start">76976 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">100791 ms</span>
+                <span class="method-start">80124 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">100933 ms</span>
+                <span class="method-start">80251 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_SmartNvisionLink</span>
-                <span class="method-start">108132 ms</span>
+                <span class="method-start">85888 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">111060 ms</span>
+                <span class="method-start">88709 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">111194 ms</span>
+                <span class="method-start">88841 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_SmartBidLink</span>
-                <span class="method-start">117284 ms</span>
+                <span class="method-start">91716 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">120896 ms</span>
+                <span class="method-start">95894 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">121029 ms</span>
+                <span class="method-start">96023 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_AboutHaudLink</span>
-                <span class="method-start">128366 ms</span>
+                <span class="method-start">102249 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">131183 ms</span>
+                <span class="method-start">105198 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">131324 ms</span>
+                <span class="method-start">105318 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_CompanyLink</span>
-                <span class="method-start">138946 ms</span>
+                <span class="method-start">111365 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">141448 ms</span>
+                <span class="method-start">113995 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">141584 ms</span>
+                <span class="method-start">114131 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_MeetTeamLink</span>
-                <span class="method-start">147664 ms</span>
+                <span class="method-start">119755 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">151171 ms</span>
+                <span class="method-start">122564 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">151312 ms</span>
+                <span class="method-start">122693 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test_CareersLink</span>
-                <span class="method-start">158623 ms</span>
+                <span class="method-start">126030 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">160579 ms</span>
+                <span class="method-start">128752 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
