--- a/src/main/java/com/haud/qa/exercise/SeleniumTest/Results/Desktop/old/Haud/classes.html
+++ b/src/main/java/com/haud/qa/exercise/SeleniumTest/Results/Desktop/old/Haud/classes.html
@@ -55,6 +55,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>test_HaudSolutionsDropDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>test_SmartChargeLink</td>
 <td>&nbsp;</td></tr>
 <tr>
